Injects views using ButterKnife

--- a/res/layout/debug.xml
+++ b/res/layout/debug.xml
@@ -46,7 +46,7 @@
         android:textColor="@android:color/white" />
 
     <TextView
-        android:id="@+id/how_far_away"
+        android:id="@+id/displacement"
         android:layout_below="@id/bearing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
