--- a/res/layout/init.xml
+++ b/res/layout/init.xml
@@ -2,62 +2,94 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/teal_background">
-<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical">
-    <ImageView
-            android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_mapzen_logo_white"
-            android:layout_alignParentTop="true" />
-    <TextView
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/teal_background">
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:fontFamily="sans-serif-thin"
-            android:textSize="16pt"
-            android:text="The best open maps and services for everyone to use."/>
+            android:layout_centerHorizontal="true"
+            android:orientation="vertical">
+        <ImageView
+                android:id="@+id/logo"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="60dp"
+                android:layout_gravity="center"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_mapzen_logo_white"
+                android:layout_alignParentTop="true" />
 
-</LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
+            android:id="@+id/login_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-            android:orientation="vertical">
-    <Button
-            android:id="@+id/sign_up_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:text="@string/osm_init_sign_up"
-            android:fontFamily="sans-serif"
-            android:background="@color/button_red"
-            android:layout_alignParentBottom="true"/>
-    <Button
-            android:id="@+id/log_in_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="80dp"
-            android:text="@string/osm_init_login"
-            android:fontFamily="sans-serif"
-            android:background="@color/button_dark_blue"
-            android:layout_alignParentBottom="true"/>
+            android:orientation="vertical"
+            android:visibility="invisible">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:paddingBottom="10dp"
+                android:gravity="center"
+                android:textColor="@color/sign_up_text"
+                android:fontFamily="sans-serif-thin"
+                android:textSize="10pt"
+                android:text="Sign up or log in with Open Street Map to get started."/>
+        <Button
+                android:id="@+id/sign_up_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:text="@string/osm_init_sign_up"
+                android:textColor="@color/white"
+                android:fontFamily="sans-serif"
+                android:background="@color/button_red"
+                android:textSize="10pt"
+                android:layout_alignParentBottom="true"/>
+        <Button
+                android:id="@+id/log_in_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="80dp"
+                android:textColor="@color/white"
+                android:text="@string/osm_init_login"
+                android:fontFamily="sans-serif"
+                android:background="@color/button_dark_blue"
+                android:textSize="10pt"
+                android:layout_alignParentBottom="true"/>
     </LinearLayout>
+
+    <LinearLayout
+            android:id="@+id/motto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:paddingBottom="100dp">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:paddingBottom="10dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:fontFamily="sans-serif-thin"
+                android:textSize="16pt"
+                android:text="Start where you are. "/>
+
+            </LinearLayout>
+
 
 </RelativeLayout>
