--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#fff</color>
     <color name="button_red">#d46a5f</color>
     <color name="button_dark_blue">#345557</color>
+    <color name="button_outline">#c7c7c7</color>
+    <color name="sign_up_text">#3b3b3b</color>
 
 </resources>
