--- a/res/layout/init.xml
+++ b/res/layout/init.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -13,17 +12,14 @@
             android:orientation="vertical">
         <ImageView
                 android:id="@+id/logo"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginTop="60dp"
                 android:layout_gravity="center"
-                android:scaleType="fitXY"
                 android:src="@drawable/ic_mapzen_logo_white"
-                android:layout_alignParentTop="true" />
-
-
+                 />
     </LinearLayout>
-
     <LinearLayout
             android:id="@+id/login_layout"
             android:layout_width="wrap_content"
@@ -33,21 +29,25 @@
             android:orientation="vertical"
             android:visibility="invisible">
         <TextView
+                android:id="@+id/login_explanation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="50dp"
                 android:layout_gravity="center"
                 android:textAlignment="center"
-                android:paddingBottom="10dp"
                 android:gravity="center"
                 android:textColor="@color/sign_up_text"
-                android:fontFamily="sans-serif-thin"
+                android:fontFamily="sans-serif-light"
                 android:textSize="10pt"
-                android:text="Sign up or log in with Open Street Map to get started."/>
+                android:text="@string/login_explanation"/>
         <Button
                 android:id="@+id/sign_up_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="10dp"
                 android:text="@string/osm_init_sign_up"
@@ -60,9 +60,12 @@
                 android:id="@+id/log_in_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="80dp"
+                android:layout_marginBottom="50dp"
                 android:textColor="@color/white"
                 android:text="@string/osm_init_login"
                 android:fontFamily="sans-serif"
@@ -70,7 +73,6 @@
                 android:textSize="10pt"
                 android:layout_alignParentBottom="true"/>
     </LinearLayout>
-
     <LinearLayout
             android:id="@+id/motto"
             android:layout_width="match_parent"
@@ -87,9 +89,6 @@
                 android:textColor="@color/white"
                 android:fontFamily="sans-serif-thin"
                 android:textSize="16pt"
-                android:text="Start where you are. "/>
-
-            </LinearLayout>
-
-
+                android:text="@string/motto"/>
+    </LinearLayout>
 </RelativeLayout>
