--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -7,18 +7,21 @@
     android:background="@android:color/white">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/starting_point"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/destination"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        </LinearLayout>
+    </LinearLayout>
+
     <ImageButton
         android:id="@+id/route_reverse"
         android:layout_width="wrap_content"
@@ -26,5 +29,31 @@
         android:background="@android:color/transparent"
         android:contentDescription="reverse"
         android:src="@drawable/ic_switch" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/by_car"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_car" />
+
+        <ImageButton
+            android:id="@+id/by_bike"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_bike" />
+
+        <ImageButton
+            android:id="@+id/by_foot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_walk" />
+    </LinearLayout>
 
 </LinearLayout>
