--- a/res/layout/init.xml
+++ b/res/layout/init.xml
@@ -5,21 +5,24 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/teal_background">
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:orientation="vertical">
+
         <ImageView
                 android:id="@+id/logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="@dimen/logo_top_margin"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_mapzen_logo_white"
-                 />
+                android:src="@drawable/ic_mapzen_logo_white" />
+
     </LinearLayout>
+
     <LinearLayout
             android:id="@+id/login_layout"
             android:layout_width="wrap_content"
@@ -28,11 +31,12 @@
             android:layout_alignParentBottom="true"
             android:orientation="vertical"
             android:visibility="invisible">
+
         <TextView
                 android:id="@+id/login_explanation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="50dp"
+                android:paddingBottom="@dimen/login_text_bottom_padding"
                 android:layout_gravity="center"
                 android:textAlignment="center"
                 android:gravity="center"
@@ -40,55 +44,61 @@
                 android:fontFamily="sans-serif-light"
                 android:textSize="10pt"
                 android:text="@string/login_explanation"/>
+
         <Button
                 android:id="@+id/sign_up_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingLeft="@dimen/button_side_padding"
+                android:paddingRight="@dimen/button_side_padding"
+                android:paddingTop="@dimen/button_above_below_padding"
+                android:paddingBottom="@dimen/button_above_below_padding"
                 android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="@dimen/sign_up_bottom_margin"
                 android:text="@string/osm_init_sign_up"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:fontFamily="sans-serif"
                 android:background="@color/button_red"
-                android:textSize="10pt"
+                android:textSize="@dimen/button_font_size"
                 android:layout_alignParentBottom="true"/>
+
         <Button
                 android:id="@+id/log_in_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:paddingLeft="@dimen/button_side_padding"
+                android:paddingRight="@dimen/button_side_padding"
+                android:paddingTop="@dimen/button_above_below_padding"
+                android:paddingBottom="@dimen/button_above_below_padding"
                 android:layout_gravity="center"
-                android:layout_marginBottom="50dp"
-                android:textColor="@color/white"
+                android:layout_marginBottom="@dimen/login_text_bottom_padding"
+                android:textColor="@android:color/white"
                 android:text="@string/osm_init_login"
                 android:fontFamily="sans-serif"
                 android:background="@color/button_dark_blue"
-                android:textSize="10pt"
+                android:textSize="@dimen/button_font_size"
                 android:layout_alignParentBottom="true"/>
+
     </LinearLayout>
+
     <LinearLayout
             android:id="@+id/motto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:paddingBottom="100dp">
+            android:paddingBottom="@dimen/motto_bottom_margin">
+
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textAlignment="center"
-                android:paddingBottom="10dp"
                 android:gravity="center"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:fontFamily="sans-serif-thin"
-                android:textSize="16pt"
+                android:textSize="@dimen/motto_font_size"
                 android:text="@string/motto"/>
+
     </LinearLayout>
+
 </RelativeLayout>
