--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -1,43 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="fill_horizontal"
-    android:background="@android:color/white">
+    android:background="@android:color/transparent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/top_line"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@android:color/white">
 
-        <TextView
-            android:id="@+id/starting_point"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:id="@+id/places"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/destination"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/starting_point"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="start" />
+
+            <TextView
+                android:id="@+id/destination"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="end" />
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/route_reverse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:contentDescription="reverse"
+            android:src="@drawable/ic_switch" />
+
+
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/route_reverse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:contentDescription="reverse"
-        android:src="@drawable/ic_switch" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_line"
+        android:background="@android:color/white"
+        android:divider="@color/dark_gray">
 
         <ImageButton
             android:id="@+id/by_car"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_car" />
 
@@ -56,4 +74,17 @@
             android:src="@drawable/ic_walk" />
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/white">
+
+        <TextView
+            android:id="@+id/destination_preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="destination" />
+    </LinearLayout>
+
+</RelativeLayout>
