--- a/res/layout/init.xml
+++ b/res/layout/init.xml
@@ -19,7 +19,8 @@
                 android:layout_marginTop="@dimen/logo_top_margin"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_mapzen_logo_white"
-                android:contentDescription="@string/logo_description" />
+                android:contentDescription="@string/logo_description"
+                android:clickable="true"/>
 
     </LinearLayout>
 
