--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -7,30 +7,49 @@
     android:background="@android:color/transparent">
 
     <LinearLayout
-        android:id="@+id/top_line"
+        android:id="@+id/top_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white">
 
         <LinearLayout
             android:id="@+id/places"
+            android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:background="@color/dark_gray"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/starting_point"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/black"
+                android:background="@android:color/white"
+                android:textSize="20sp"
+                android:padding="5dp"
+                android:text="fooooo"
                 android:layout_width="match_parent"
+                android:layout_marginBottom="1dp"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/destination"
+                android:text="fooooo"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/black"
+                android:background="@android:color/white"
+                android:textSize="20sp"
+                android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
         <ImageButton
             android:id="@+id/route_reverse"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
@@ -39,10 +58,17 @@
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/border"
+        android:layout_below="@id/top_row"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@color/dark_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/top_line"
+        android:layout_below="@id/border"
         android:background="@android:color/white"
         android:divider="@color/dark_gray">
 
