--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -17,7 +17,7 @@
             android:layout_weight="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="@dimen/default_margin"
             android:background="@color/dark_gray"
             android:orientation="vertical">
 
@@ -28,7 +28,7 @@
                 android:textColor="@android:color/black"
                 android:background="@android:color/white"
                 android:textSize="20sp"
-                android:padding="5dp"
+                android:padding="@dimen/default_padding"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="1dp"
                 android:layout_height="wrap_content" />
@@ -40,7 +40,7 @@
                 android:textColor="@android:color/black"
                 android:background="@android:color/white"
                 android:textSize="20sp"
-                android:padding="5dp"
+                android:padding="@dimen/default_padding"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -138,7 +138,6 @@
             android:layout_below="@id/destination_preview"
             android:textSize="16sp"
             android:text="@string/destination_preview_distance" />
-
 
     </RelativeLayout>
 
