--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -12,16 +12,20 @@
           android:showAsAction="never" />
 
     <item android:id="@+id/phone_home"
-        android:title="@string/submit_data"
-        android:showAsAction="never" />
+          android:title="@string/submit_data"
+          android:showAsAction="never" />
+
+    <item android:id="@+id/upload_traces"
+          android:title="@string/upload_traces"
+          android:showAsAction="never" />
 
     <item android:id="@+id/login"
-        android:title="@string/osm_login"
-        android:showAsAction="never" />
+          android:title="@string/osm_login"
+          android:showAsAction="never" />
 
     <item android:id="@+id/logout"
-        android:title="@string/osm_logout"
-        android:visible="false"
-        android:showAsAction="never" />
+          android:title="@string/osm_logout"
+          android:visible="false"
+          android:showAsAction="never" />
 
 </menu>
