--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -48,6 +48,7 @@
         <ImageButton
             android:id="@+id/route_reverse"
             android:layout_weight="1"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
