adds a point minimum for uploading tracks to osm

--- a/res/values/secrets.xml
+++ b/res/values/secrets.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- provide dummy values and substitude real values at compile time -->
-    <string name="osm_key">REPLACE_KEY</string>
-    <string name="osm_secret">REPLACE_SECRET</string>
+    <!-- Provide dummy values and substitute real values at compile time. -->
+    <string name="osm_key">E5wPC5tnz8s879pD2SSuEvFmLjlDnJbv8oh2PPFR</string>
+    <string name="osm_secret">pKhwzpOXboEkxQaAc3wHbZzp5EjnXbHPv2ptFMcK</string>
 </resources>
 
