--- a/res/layout/debug.xml
+++ b/res/layout/debug.xml
@@ -33,11 +33,25 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white" />
 
-        <TextView
-            android:id="@+id/current_speed"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/current_speed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/white" />
+
+            <TextView
+                android:id="@+id/average_speed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/default_padding"
+                android:textColor="@android:color/white" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/snap_location"
@@ -53,17 +67,6 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white" />
 
-        <TextView
-            android:id="@+id/snap_bearing"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/snap_speed"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <LinearLayout
