--- a/res/layout/full_results_list.xml
+++ b/res/layout/full_results_list.xml
@@ -3,11 +3,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="?android:attr/actionBarSize">
+
+    <TextView
+        android:id="@+id/term"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/darker_gray"
+        android:paddingTop="@dimen/default_padding_vertical"
+        android:paddingBottom="@dimen/default_padding_vertical"
+        android:paddingLeft="@dimen/default_padding_horizontal"
+        android:paddingRight="@dimen/default_padding_horizontal"
+        android:textColor="@android:color/white"
+        android:textSize="16sp" />
 
     <ListView
         android:id="@android:id/list"
-        android:paddingTop="?android:attr/actionBarSize"
         android:background="@android:color/white"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
