--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
     <com.sothree.slidinguppanel.SlidingUpPanelLayout
-            xmlns:sothree="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:sothree="http://schemas.android.com/apk/res/com.mapzen"
             android:id="@+id/sliding_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -17,7 +14,6 @@
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
-
 
             <LinearLayout
                     android:id="@+id/top_row"
@@ -155,8 +151,8 @@
                         android:textSize="16sp"
                         android:text="@string/destination_preview_distance" />
             </RelativeLayout>
-    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
-</RelativeLayout>
+
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
 
 
