--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,6 +2,9 @@
 <resources>
     <style name="Theme.Mapzen" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Mapzen</item>
+        <item name="android:actionModeBackground">@drawable/cab_background_top_mapzen</item>d
+        <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_mapzen</item>
+        <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Mapzen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:itemTextAppearance">@style/MapzenItemTextAppearance</item>
         <item name="android:actionOverflowButtonStyle">@style/MapzenOverflow</item>
