--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="blue">#6ea0a4</color>
     <color name="yellow">#e6ead2</color>
     <color name="brown">#563630</color>
-    <color name="light_grey">#898989</color>
+    <color name="light_gray">#898989</color>
 </resources>
