--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -19,4 +19,9 @@
     <dimen name="motto_bottom_margin">110dp</dimen>
     <dimen name="button_font_size">10pt</dimen>
     <dimen name="motto_font_size">16pt</dimen>
+
+    <!-- fonts -->
+    <dimen name="big">32sp</dimen>
+    <dimen name="medium">21sp</dimen>
+    <dimen name="small">15sp</dimen>
 </resources>
