--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -59,4 +59,10 @@
         <item name="android:background">@drawable/btn_cab_done_mapzen</item>
     </style>
 
+    <style name="MapzenSearchText" parent="@android:style/TextAppearance.Holo.Widget.EditText">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">@dimen/medium</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+
 </resources>
