--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="Theme.Mapzen" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Mapzen</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:itemTextAppearance">@style/MapzenItemTextAppearance</item>
     </style>
 
     <style name="ActionBar.Solid.Mapzen" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
@@ -16,6 +17,12 @@
     </style>
 
     <style name="MapzenSearchText" parent="@android:style/TextAppearance.Holo.Widget.EditText">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">@dimen/medium</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+
+    <style name="MapzenItemTextAppearance" parent="@android:style/TextAppearance.Widget.DropDownItem">
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/medium</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
