--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -3,7 +3,7 @@
 
     <item android:id="@+id/search"
           android:title="@string/search_title"
-          android:icon="@drawable/ic_action_search"
+          android:icon="@drawable/ic_search"
           android:showAsAction="collapseActionView|ifRoom"
           android:actionViewClass="android.widget.SearchView" />
 
