--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,6 +4,8 @@
         <item name="android:actionBarStyle">@style/ActionBar.Solid.Mapzen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:itemTextAppearance">@style/MapzenItemTextAppearance</item>
+        <item name="android:actionOverflowButtonStyle">@style/MapzenOverflow</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_back_arrow</item>
     </style>
 
     <style name="ActionBar.Solid.Mapzen" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
@@ -26,5 +28,9 @@
         <item name="android:textColor">@color/red</item>
         <item name="android:textSize">@dimen/medium</item>
         <item name="android:fontFamily">sans-serif-condensed</item>
+    </style>
+
+    <style name="MapzenOverflow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
+        <item name="android:src">@drawable/ic_menu_overflow</item>
     </style>
 </resources>
