sliding up moved to routefragment

--- a/res/layout/base.xml
+++ b/res/layout/base.xml
@@ -29,8 +29,8 @@
 
     <FrameLayout
        android:id="@+id/routes_container"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content" />
+       android:layout_width="fill_parent"
+       android:layout_height="match_parent" />
 
     <FrameLayout
        android:id="@+id/settings"
