--- a/res/layout/route_preview.xml
+++ b/res/layout/route_preview.xml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:sothree="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sliding_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom"
-    sothree:panelHeight="68dp"
-    sothree:shadowHeight="4dp"
-    sothree:paralaxOffset="200dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="fill_horizontal"
+                android:background="@android:color/transparent">
 
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
+    <LinearLayout
             android:id="@+id/top_row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white">
 
-            <LinearLayout
+        <LinearLayout
                 android:id="@+id/places"
                 android:layout_weight="3"
                 android:layout_width="wrap_content"
@@ -31,127 +21,133 @@
                 android:background="@color/dark_gray"
                 android:orientation="vertical">
 
-                ]<TextView
-                     android:id="@+id/starting_point"
-                     android:maxLines="1"
-                     android:singleLine="true"
-                     android:textColor="@android:color/black"
-                     android:background="@android:color/white"
-                     android:textSize="20sp"
-                     android:padding="@dimen/default_padding"
-                     android:layout_width="match_parent"
-                     android:layout_marginBottom="1dp"
-                     android:layout_height="wrap_content" />
-
-                <TextView
-                     android:id="@+id/destination"
-                     android:maxLines="1"
-                     android:singleLine="true"
-                     android:textColor="@android:color/black"
-                     android:background="@android:color/white"
-                     android:textSize="20sp"
-                     android:padding="@dimen/default_padding"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content" />
-            </LinearLayout>
-
-             <ImageButton
-                 android:id="@+id/route_reverse"
-                 android:layout_weight="1"
-                 android:layout_gravity="center_horizontal|center_vertical"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:background="@android:color/transparent"
-                 android:contentDescription="@string/reverse"
-                 android:src="@drawable/ic_switch" />
-
-            </LinearLayout>
-
-            <View
-                android:id="@+id/border"
-                android:layout_below="@id/top_row"
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/dark_gray" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/border"
-                android:background="@android:color/white"
-                android:divider="@color/dark_gray">
-
-                <RadioGroup
-                    android:id="@+id/routing_mode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/by_car"
-                        android:checked="true"
-                        android:button="@drawable/radio_button_car"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    <RadioButton
-                        android:id="@+id/by_bike"
-                        android:button="@drawable/radio_button_bike"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    <RadioButton
-                        android:id="@+id/by_foot"
-                        android:button="@drawable/radio_button_walk"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    </RadioGroup>
-            </LinearLayout>
-
-    </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/destination_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:paddingTop="@dimen/default_padding_vertical"
-                android:paddingBottom="@dimen/default_padding_vertical"
-                android:paddingLeft="@dimen/default_padding_horizontal"
-                android:paddingRight="@dimen/default_padding_horizontal"
-                android:background="@android:color/white">
-
-                <TextView
-                    android:id="@+id/start"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginLeft="8dp"
-                    android:drawablePadding="-4dp"
-                    android:drawableTop="@drawable/ic_lets_go"
-                    android:textColor="@color/lets_go"
-                    android:text="@string/start" />
-
-                <TextView
-                    android:id="@+id/destination_preview"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_toLeftOf="@id/start"
-                    android:ellipsize="end"
+            <TextView
+                    android:id="@+id/starting_point"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@android:color/black"
+                    android:background="@android:color/white"
                     android:textSize="20sp"
-                    android:text="@string/destination_preview" />
+                    android:padding="@dimen/default_padding"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="1dp"
+                    android:layout_height="wrap_content" />
 
-                <com.mapzen.widget.DistanceView
-                    android:id="@+id/destination_preview_distance"
+            <TextView
+                    android:id="@+id/destination"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:background="@android:color/white"
+                    android:textSize="20sp"
+                    android:padding="@dimen/default_padding"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <ImageButton
+                android:id="@+id/route_reverse"
+                android:layout_weight="1"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/reverse"
+                android:src="@drawable/ic_switch" />
+
+    </LinearLayout>
+
+    <View
+            android:id="@+id/border"
+            android:layout_below="@id/top_row"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/dark_gray" />
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/border"
+            android:background="@android:color/white"
+            android:divider="@color/dark_gray">
+
+        <RadioGroup
+                android:id="@+id/routing_mode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:orientation="horizontal">
+
+            <RadioButton
+                    android:id="@+id/by_car"
+                    android:checked="true"
+                    android:button="@drawable/radio_button_car"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/destination_preview"
-                    android:textSize="16sp"
-                    android:text="@string/destination_preview_distance" />
-            </RelativeLayout>
+                    android:layout_height="wrap_content" />
+            <RadioButton
+                    android:id="@+id/by_bike"
+                    android:button="@drawable/radio_button_bike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            <RadioButton
+                    android:id="@+id/by_foot"
+                    android:button="@drawable/radio_button_walk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-</com.sothree.slidinguppanel.SlidingUpPanelLayout>
+        </RadioGroup>
+    </LinearLayout>
+
+    <RelativeLayout
+            android:id="@+id/destination_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:paddingTop="@dimen/default_padding_vertical"
+            android:paddingBottom="@dimen/default_padding_vertical"
+            android:paddingLeft="@dimen/default_padding_horizontal"
+            android:paddingRight="@dimen/default_padding_horizontal"
+            android:background="@android:color/white">
+
+        <TextView
+                android:id="@+id/start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="8dp"
+                android:drawablePadding="-4dp"
+                android:drawableTop="@drawable/ic_lets_go"
+                android:textColor="@color/lets_go"
+                android:text="@string/start" />
+
+        <TextView
+                android:id="@+id/destination_preview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@id/start"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:text="@string/destination_preview" />
+
+        <com.mapzen.widget.DistanceView
+                android:id="@+id/destination_preview_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/destination_preview"
+                android:textSize="16sp"
+                android:text="@string/destination_preview_distance" />
+
+    </RelativeLayout>
+
+    <View
+            android:id="@+id/divider"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/divider_height"
+            android:layout_above="@id/destination_container"
+            android:background="@color/dark_gray" />
+
+</RelativeLayout>
