--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="yellow">#e6ead2</color>
     <color name="brown">#563630</color>
     <color name="light_gray">#898989</color>
+    <color name="transparent_white">#CCFFFFFF</color>
 </resources>
